--- a/src/components/footer/footer.twig
+++ b/src/components/footer/footer.twig
@@ -2,16 +2,16 @@
    <div class="container">
      
       <div class="row d-flex justify-content-between align-items-center h-100 position-relative">
-          <div class="footer__logo">
-            <img src="images/content/logo.png" loading="lazy" alt="" />
-         </div>
-         <p class="p3 col-lg-6">
+          <a href="#" class="footer__logo">
+            <img src="images/ico/logo.svg" loading="lazy" alt="" />
+         </a>
+         <p class="p2 col-lg-6">
            <strong>
                &copy; 2019 – 2022 Slezský FC Opava & <a href="#">eSports.cz,</a> s.r.o.
            </strong>
          </p>
          <div class="footer__social align-items-center  justify-content-center col-lg-6 d-flex justify-content-md-end">
-            <a href="#" class="p3">
+            <a href="#" class="p2">
             Nastavení cookies
          </a>
          {% include "@components/social/social.twig" %}
