--- a/src/components/header/header.twig
+++ b/src/components/header/header.twig
@@ -5,7 +5,7 @@
             <div class="header__logo-img">
                <img src="images/content/logo.png"  loading="lazy" alt="logo" />
             </div>
-            <h3 class="h3">Slezský FC Opava</h3>
+            <div class="h2">Slezský FC Opava</div>
          </a>
          <button class="c-header__opener js-header__opener" type="button">
             <span></span>
