--- a/src/components/matches-section/matches-section.twig
+++ b/src/components/matches-section/matches-section.twig
@@ -1,25 +1,39 @@
-<div class="team-section">
+<section class="matches-section">
    <div class="menu-section">
       <div class="container">
          <div class="menu-section__inner">
-            <h2 class="h2">
+            <h1 class="h1">
              FORTUNA:NÁRODNÍ LIGA
-            </h2>
-            <a href="#" class=" btn">
-               Doma
-            </a>
-             <a href="#" class=" btn">
-               Venku
-            </a>
-             <a href="#" class=" btn">
-               Budoucí
-            </a>
-             <a href="#" class=" btn">
-              Odehrané
-            </a>
-            <form action="" class="ms-auto w-auto d-flex">
-              <label class="o-select">
-                  <select class="js-select">
+            </h1>
+            <ul class="menu-section__links d-flex">
+               <li>
+                  <a href="#" class=" btn">
+                     Doma
+                  </a>
+               </li>
+               <li>
+                  <a href="#" class=" btn">
+                     Venku
+                  </a>
+               </li>
+               <li>
+                   <a href="#" class=" btn">
+                     Budoucí
+                  </a>
+               </li>
+               <li>
+                  <a href="#" class=" btn">
+                     Odehrané
+                  </a>
+               </li>
+            </ul>
+            
+            
+            
+            
+            <form action="" class="ms-auto w-auto d-flex menu-section__form">
+              <label class="o-select ">
+                  <select class="js-select menu-section__label">
                      <option>Vybrat měsíc</option>
                      <option value="tipsport">2020/21</option>
                      <option value="tipsport">Leden</option>
@@ -27,7 +41,7 @@
                      <option value="tipsport">Květen</option>
                   </select>
                </label>
-               <label class="o-select">
+               <label class="o-select menu-section__label">
                   <select class="js-select">
                      <option>2021/22</option>
                      <option value="tipsport">2020/21</option>
@@ -43,12 +57,12 @@
    <div class="container">
       <div class="matches-section__inner">
          <div class="o-content">
-            <h3>Únor 2022</h3>
+            <h2 class="h2">Únor 2022</h2>
          </div>
          <div class="col-12 d-flex">
             <div class="col-lg-6 col-xl-12 match match--d d-flex align-items-center">
                <div class="match__type">
-                  <h4 class="h4">d</h4>    
+                  <h3 class="h3">d</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -65,9 +79,9 @@
                   </div>
                </div>
                <div class="match__team">
-                  <h3 class="h3">
+                  <h2 class="h2">
                      FC Sellier&Bellot Vlašim
-                  </h3>
+                  </h2>
                   <p class="p3">
                      Městský stadion, Opava
                   </p>
@@ -89,7 +103,7 @@
             </div>
             <div class="col-lg-6 col-xl-12 match match--v d-flex align-items-center">
                <div class="match__type">
-                  <h4 class="h4">V</h4>    
+                  <h3 class="h3">V</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -106,9 +120,9 @@
                   </div>
                </div>
                <div class="match__team">
-                  <h3 class="h3">
+                  <h2 class="h2">
                      FC Sellier&Bellot Vlašim
-                  </h3>
+                  </h2>
                   <p class="p3">
                      Městský stadion, Opava
                   </p>
@@ -130,7 +144,7 @@
             </div>
             <div class="col-lg-6 col-xl-12 match match--o d-flex align-items-center">
                <div class="match__type">
-                  <h4 class="h4">O</h4>    
+                  <h3 class="h3">O</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -147,9 +161,9 @@
                   </div>
                </div>
                <div class="match__team">
-                  <h3 class="h3">
+                  <h2 class="h2">
                      FC Sellier&Bellot Vlašim
-                  </h3>
+                  </h2>
                   <p class="p3">
                      Městský stadion, Opava
                   </p>
@@ -171,7 +185,7 @@
             </div>
             <div class="col-lg-6 col-xl-12 match match--b d-flex align-items-center">
                <div class="match__type">
-                  <h4 class="h4">b</h4>    
+                  <h3 class="h3">b</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -188,9 +202,9 @@
                   </div>
                </div>
                <div class="match__team">
-                  <h3 class="h3">
+                  <h2 class="h2">
                      FC Sellier&Bellot Vlašim
-                  </h3>
+                  </h2>
                   <p class="p3">
                      Městský stadion, Opava
                   </p>
@@ -212,12 +226,12 @@
             </div>
          </div>
           <div class="o-content">
-            <h3>Únor 2022</h3>
+            <h2>Únor 2022</h2>
          </div>
          <div class="col-12 d-flex">
             <div class="col-lg-6 col-xl-12 match match--d d-flex align-items-center">
                <div class="match__type">
-                  <h4 class="h4">d</h4>    
+                  <h3 class="h3">d</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -234,9 +248,9 @@
                   </div>
                </div>
                <div class="match__team">
-                  <h3 class="h3">
+                  <h2 class="h2">
                      FC Sellier&Bellot Vlašim
-                  </h3>
+                  </h2>
                   <p class="p3">
                      Městský stadion, Opava
                   </p>
@@ -258,7 +272,7 @@
             </div>
             <div class="col-lg-6 col-xl-12 match match--v d-flex align-items-center">
                <div class="match__type">
-                  <h4 class="h4">V</h4>    
+                  <h3 class="h3">V</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -275,9 +289,9 @@
                   </div>
                </div>
                <div class="match__team">
-                  <h3 class="h3">
+                  <h2 class="h2">
                      FC Sellier&Bellot Vlašim
-                  </h3>
+                  </h2>
                   <p class="p3">
                      Městský stadion, Opava
                   </p>
@@ -299,7 +313,7 @@
             </div>
             <div class="col-lg-6 col-xl-12 match match--o d-flex align-items-center">
                <div class="match__type">
-                  <h4 class="h4">O</h4>    
+                  <h3 class="h3">O</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -316,9 +330,9 @@
                   </div>
                </div>
                <div class="match__team">
-                  <h3 class="h3">
+                  <h2 class="h2">
                      FC Sellier&Bellot Vlašim
-                  </h3>
+                  </h2>
                   <p class="p3">
                      Městský stadion, Opava
                   </p>
@@ -340,7 +354,7 @@
             </div>
             <div class="col-lg-6 col-xl-12 match match--b d-flex align-items-center">
                <div class="match__type">
-                  <h4 class="h4">b</h4>    
+                  <h3 class="h3">b</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -357,9 +371,9 @@
                   </div>
                </div>
                <div class="match__team">
-                  <h3 class="h3">
+                  <h2 class="h2">
                      FC Sellier&Bellot Vlašim
-                  </h3>
+                  </h2>
                   <p class="p3">
                      Městský stadion, Opava
                   </p>
@@ -381,12 +395,12 @@
             </div>
          </div>
           <div class="o-content">
-            <h3>Únor 2022</h3>
+            <h2>Únor 2022</h2>
          </div>
          <div class="col-12 d-flex">
             <div class="col-lg-6 col-xl-12 match match--d d-flex align-items-center">
                <div class="match__type">
-                  <h4 class="h4">d</h4>    
+                  <h3 class="h3">d</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -403,9 +417,9 @@
                   </div>
                </div>
                <div class="match__team">
-                  <h3 class="h3">
+                  <h2 class="h2">
                      FC Sellier&Bellot Vlašim
-                  </h3>
+                  </h2>
                   <p class="p3">
                      Městský stadion, Opava
                   </p>
@@ -427,7 +441,7 @@
             </div>
             <div class="col-lg-6 col-xl-12 match match--v d-flex align-items-center">
                <div class="match__type">
-                  <h4 class="h4">V</h4>    
+                  <h3 class="h3">V</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -444,9 +458,9 @@
                   </div>
                </div>
                <div class="match__team">
-                  <h3 class="h3">
+                  <h2 class="h2">
                      FC Sellier&Bellot Vlašim
-                  </h3>
+                  </h2>
                   <p class="p3">
                      Městský stadion, Opava
                   </p>
@@ -468,7 +482,7 @@
             </div>
             <div class="col-lg-6 col-xl-12 match match--o d-flex align-items-center">
                <div class="match__type">
-                  <h4 class="h4">O</h4>    
+                  <h3 class="h3">O</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -485,9 +499,9 @@
                   </div>
                </div>
                <div class="match__team">
-                  <h3 class="h3">
+                  <h2 class="h2">
                      FC Sellier&Bellot Vlašim
-                  </h3>
+                  </h2>
                   <p class="p3">
                      Městský stadion, Opava
                   </p>
@@ -505,7 +519,7 @@
             </div>
             <div class="col-lg-6 col-xl-12 match match--b d-flex align-items-center">
                <div class="match__type">
-                  <h4 class="h4">b</h4>    
+                  <h3 class="h3">b</h3>    
                </div>
                <div class="match__date">
                   <p class="p3">1. kolo</p>
@@ -522,9 +536,9 @@
                   </div>
                </div>
                <div class="match__team">
-                  <h3 class="h3">
+                  <h2 class="h2">
                      FC Sellier&Bellot Vlašim
-                  </h3>
+                  </h2>
                   <p class="p3">
                      Městský stadion, Opava
                   </p>
@@ -548,4 +562,4 @@
       </div>   
    </div>
    
-</div>
+</section>
