--- a/src/components/soupiska-section/soupiska-section.twig
+++ b/src/components/soupiska-section/soupiska-section.twig
@@ -1,27 +1,46 @@
-<div class="team-section">
+<section class="team-section">
    <div class="menu-section">
       <div class="container">
          <div class="menu-section__inner">
-            <h2 class="h2">
+            <h1 class="h1">
              Soupiska A-tým
-            </h2>
-            <a href="#" class=" btn">
-               Brankáři
-            </a>
-             <a href="#" class=" btn">
-               Obránci
-            </a>
-             <a href="#" class=" btn">
-               Záložníci
-            </a>
-             <a href="#" class=" btn">
-              Útočníci 
-            </a>
-            <div class=" f-btn btn">
-               Realizační tým
-            </div>
-            <form action="" class="ms-auto w-auto">
-               <label class="o-select">
+            </h1>
+            <ul class="menu-section__links d-flex">
+               <li>
+                  <a href="#" class=" btn">
+                     Brankáři
+                  </a>
+               </li>
+               <li>
+                   <a href="#" class=" btn">
+                     Obránci
+                  </a>
+               </li>
+               <li>
+                  <a href="#" class=" btn">
+                     Záložníci
+                   </a>
+               </li>
+               <li>
+                  <a href="#" class=" btn">
+                     Útočníci 
+                  </a>
+               </li>
+               <li class="ms-8">
+                   <div class="f-btn btn">
+                     Realizační tým
+                  </div>
+               </li>
+              
+            </ul>
+           
+           
+            
+             
+            
+            
+            <form action="" class="ms-auto w-auto menu-section__form">
+               <label class="o-select menu-section__label">
                   <select class="js-select">
                      <option>2021/22</option>
                      <option value="tipsport">2020/21</option>
@@ -37,22 +56,24 @@
    <div class="team-section__items">
         <div class="container">
          <div class="o-content">
-            <h3>
+            <h2 class="h2">
                Brankáři
-            </h3>
+            </h2>
          </div>
-           <ul class="row d-flex">
+           <ul class="row">
             <li class=" col-lg-4 col-xxl-3 col-sm-6  pe-5 ps-5">
                <a  class="team-section__item" href="#">
                   <div class="team-section__img">
                      <img src="images/content/hrac-3.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
-                        <span>David</span>
-                        Mikula
-                     </h3>
-                     <p>trenér</p>
+                     <h2 class="h2">
+                        <span>Kryštof</span>
+                        Lasák
+                     </h2>
+                     <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                   <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -84,11 +105,13 @@
                      <img src="images/content/hrac-1.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>asistent trenéra</p>
+                     </h2>
+                     <div class="team-section__number">
+                        19
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -116,23 +139,25 @@
             </li>
             </ul>
          <div class="o-content">
-            <h3>
+            <h2 class="h2">
                Obránci
-            </h3>
+            </h2>
          </div>
        
-         <ul class="row d-flex">
+         <ul class="row">
              <li class=" col-lg-4 col-xxl-3 col-sm-6 pe-5 ps-5">
                <a  class="team-section__item" href="#">
                   <div class="team-section__img">
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                      <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -164,11 +189,13 @@
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>kondiční trenér</p>
+                     </h2>
+                      <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -200,11 +227,13 @@
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>kondiční trenér</p>
+                     </h2>
+                     <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -236,11 +265,13 @@
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                      <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -272,11 +303,13 @@
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                      <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -304,23 +337,25 @@
             </li>
          </ul>
            <div class="o-content">
-            <h3>
+            <h2 class="h2">
                Záložníci
-            </h3>
+            </h2>
          </div>
        
-         <ul class="row d-flex">
+         <ul class="row ">
              <li class=" col-lg-4 col-xxl-3 col-sm-6 pe-5 ps-5">
                <a  class="team-section__item" href="#">
                   <div class="team-section__img">
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                     <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -352,11 +387,13 @@
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>kondiční trenér</p>
+                     </h2>
+                      <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -388,11 +425,13 @@
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>kondiční trenér</p>
+                     </h2>
+                     <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -424,11 +463,13 @@
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                      <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -460,11 +501,13 @@
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                      <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -492,23 +535,25 @@
             </li>
          </ul>
            <div class="o-content">
-            <h3>
+            <h2 class="h2">
                Útočníci
-            </h3>
+            </h2>
          </div>
        
-         <ul class="row d-flex">
+        <ul class="row ">
              <li class=" col-lg-4 col-xxl-3 col-sm-6 pe-5 ps-5">
                <a  class="team-section__item" href="#">
                   <div class="team-section__img">
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                     <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -540,11 +585,13 @@
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>kondiční trenér</p>
+                     </h2>
+                      <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -576,11 +623,13 @@
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>kondiční trenér</p>
+                     </h2>
+                     <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -612,11 +661,13 @@
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                      <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -648,11 +699,13 @@
                      <img src="images/content/hrac-2.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                      <div class="team-section__number">
+                        29
+                     </div>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -682,4 +735,4 @@
                   
       </div>
    </div>
-</div>
+</section>
