--- a/src/components/team-section/team-section.twig
+++ b/src/components/team-section/team-section.twig
@@ -1,17 +1,17 @@
 
 
-<div class="team-section">
+<section class="team-section team">
    <div class="menu-section">
       <div class="container">
          <div class="menu-section__inner">
-            <h2 class="h2">
+            <h1 class="h1">
                Realizační tým
-            </h2>
+            </h1>
             <div class="menu-section__btn f-btn btn">
                Hráči
             </div>
-            <form action="" class="ms-auto w-auto">
-               <label class="o-select">
+            <form action="" class="ms-auto w-auto menu-section__form">
+               <label class="o-select menu-section__label">
                   <select class="js-select">
                      <option>2021/22</option>
                      <option value="tipsport">2020/21</option>
@@ -26,18 +26,18 @@
    </div>
    <div class="team-section__items">
         <div class="container">
-         <ul class="row d-flex">
+         <ul class="row">
             <li class=" col-lg-4 col-xxl-3 col-sm-6  pe-5 ps-5">
                <a  class="team-section__item" href="#">
                   <div class="team-section__img">
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                     <p class="p4">trenér</p>
                   </div>
                   <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -69,11 +69,11 @@
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>asistent trenéra</p>
+                     </h2>
+                     <p class="p4">asistent trenéra</p>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -105,11 +105,11 @@
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                     <p class="p4">trenér</p>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -141,11 +141,11 @@
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>kondiční trenér</p>
+                     </h2>
+                     <p class="p4">kondiční trenér</p>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -177,11 +177,11 @@
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>kondiční trenér</p>
+                     </h2>
+                     <p class="p4">kondiční trenér</p>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -213,11 +213,11 @@
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                     <p class="p4">trenér</p>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -249,11 +249,11 @@
                      <img src="images/content/david_mikula.png" loading="lazy" alt="" />
                   </div>
                   <div class="team-section__info d-flex justify-content-between align-items-end   ">
-                     <h3 class="h3">
+                     <h2 class="h2">
                         <span>David</span>
                         Mikula
-                     </h3>
-                     <p>trenér</p>
+                     </h2>
+                     <p class="p4">trenér</p>
                   </div>
                    <div class="team-section__hover">
                      <ul class=" d-flex justify-content-center align-items-center">
@@ -282,4 +282,4 @@
          </ul>
       </div>
    </div>
-</div>
+</section>
