--- a/src/layouts/00.0_atom.twig
+++ b/src/layouts/00.0_atom.twig
@@ -12,7 +12,6 @@
   <p class="p2">P2 - odstavec</p>
   <p class="p3">P3 - odstavec</p>
   <p class="p4">P4 - odstavec</p>
-  <p class="p5">P5 - odstavec</p>
   <hr />
   <h2 class="h2 mb-2">## Nadpisy</h2>
   <h1 class="h1">H1 - nadpis</h1>
@@ -20,65 +19,30 @@
   <h3 class="h3">H3 - nadpis</h3>
   <h4 class="h4">H4 - nadpis</h4>
   <h5 class="h5">H5 - nadpis</h5>
+  <h6 class="h6">H6 - nadpis</h6>
   <hr />
-  {# <h2 class="h2 mb-2">## Tlačítka - primary</h2>
-  <a class="btn" href="">Button</a><br />
-  <br /> #}
-  {# <button class="btn" disabled>Button</button><br />
-  <br /> #}
-  {# <a class="o-btn o-btn-primary-light" href="">Button</a><br />
-  <br />
-  <button class="o-btn o-btn-primary-light" disabled>Button</button><br />
-  <br />
-  <a class="o-btn o-btn-primary-text" href="">Button</a><br />
-  <br />
-  <button class="o-btn o-btn-primary-text" disabled>Button</button><br />
-  <br />
-  <hr /> #}
-  <h2 class="h2 mb-2">## Tlačítka - secondary</h2>
-  <a class="btn f-btn" href="">Button</a><br />
-  <br />
-  <button class="btn" disabled>Button</button><br />
-  <br />
-  <a class="btn btn-secondary-light" href="">Button</a><br />
+  <h2 class="h2 mb-2">## Tlačítka - primary</h2>
+  <br>
+   <a class="btn f-btn" href="">Button</a><br />
   <br />
   <button class="btn f-btn" disabled>Button</button><br />
   <br />
-  <a class="btn btn-secondary-text" href="">Button</a><br />
+    <a class="btn btn-secondary-text" href="">Button</a><br />
   <br />
-  <button class="btn btn-secondary-text" disabled>Button</button>
+  <button class="btn btn-secondary-text" disabled>Button</button><br />
+  <br />
   <hr />
+  <h2 class="h2 mb-2">## Tlačítka - secondary</h2>
+  <a class="btn p-btn" href="">Button</a><br />
+  <br />
+  <button class="btn p-btn" disabled>Button</button><br />
+  <br />
+ 
   <h2 class="h2 mb-2">## Stíny</h2>
   <div class="p-3 u-shadow-1" style="background-color: #fff";>
     Stín 1 dp
   </div>
-  <div class="p-3 u-shadow-2" style="background-color: #fff";>
-    Stín 2 dp
-  </div>
-  <div class="p-3 u-shadow-3" style="background-color: #fff";>
-    Stín 3 dp
-  </div>
-  <div class="p-3 u-shadow-4" style="background-color: #fff";>
-    Stín 4 dp
-  </div>
-  <div class="p-3 u-shadow-6" style="background-color: #fff";>
-    Stín 6 dp
-  </div>
-  <div class="p-3 u-shadow-8" style="background-color: #fff";>
-    Stín 8 dp
-  </div>
-  <div class="p-3 u-shadow-9" style="background-color: #fff";>
-    Stín 9 dp
-  </div>
-  <div class="p-3 u-shadow-12" style="background-color: #fff";>
-    Stín 12 dp
-  </div>
-  <div class="p-3 u-shadow-16" style="background-color: #fff";>
-    Stín 16 dp
-  </div>
-  <div class="p-3 u-shadow-24" style="background-color: #fff";>
-    Stín 24 dp
-  </div>
+  
   <hr />
   <h2 class="h2 mb-2">## Dropdown</h2>
   <label class="o-select mb-8">
@@ -89,27 +53,16 @@
       <option value="tipsport">Dropdown 3</option>
       <option value="tipsport">Dropdown 4</option>
     </select>
-    <span class="o-select__label">Label</span>
   </label>
-  <label class="o-select mb-8">
-    <select class="js-select-with-image">
-      <option value="tipsport">Dropdown</option>
-      <option value="tipsport">Dropdown 1</option>
-      <option value="tipsport">Dropdown 2</option>
-      <option value="tipsport">Dropdown 3</option>
-      <option value="tipsport">Dropdown 4</option>
-    </select>
-    <span class="o-select__label">Label</span>
-  </label>
+ 
   <label class="o-select -error mb-8">
-    <select class="js-select-with-image">
+    <select class="js-select">
       <option value="tipsport">Dropdown</option>
       <option value="tipsport">Dropdown 1</option>
       <option value="tipsport">Dropdown 2</option>
       <option value="tipsport">Dropdown 3</option>
       <option value="tipsport">Dropdown 4</option>
     </select>
-    <span class="o-select__label">Label</span>
   </label>
   <label class="o-select -disabled mb-8">
     <select class="js-select" disabled>
@@ -119,7 +72,6 @@
       <option value="tipsport">Dropdown 3</option>
       <option value="tipsport">Dropdown 4</option>
     </select>
-    <span class="o-select__label">Label</span>
   </label>
   <hr />
 </div>
