--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,9 +3,11 @@
   position: relative;
   color: var(--color-light);
   padding: 24px 0;
+
   .row {
-    @include media-breakpoint-down(md) {
-      .p3 {
+    @include media-breakpoint-down(lg) {
+      padding-top: 24px;
+      .p2 {
         margin-top: 16px;
         text-align: center;
       }
@@ -20,13 +22,13 @@
     height: 100%;
   }
   &__social {
-    @include media-breakpoint-down(md) {
+    @include media-breakpoint-down(lg) {
       flex-direction: column;
     }
     .social {
       margin-right: -4px;
       margin-left: 28px;
-      @include media-breakpoint-down(md) {
+      @include media-breakpoint-down(lg) {
         margin-right: 0;
         margin-left: 0;
         margin-top: 12px;
@@ -41,6 +43,8 @@
     top: -52px;
     width: 56px;
     height: 72px;
+    padding: 0;
+    display: block;
     img {
       width: 100%;
       height: 100%;
