--- a/src/components/pub-section/pub-section.twig
+++ b/src/components/pub-section/pub-section.twig
@@ -1,6 +1,6 @@
 <div class="pub">
    <div class="container">
-      <div class="row d-flex c-gallery-section ms-n5 me-n5">
+      <div class="row  c-gallery-section ms-n5 me-n5">
          <div class="col-xl-6 ps-5 pe-5">
             <figure>
                <a target="_blank" href="#" class=" d-block w-100 mb-4">
