--- a/src/components/team-section/team-section.scss
+++ b/src/components/team-section/team-section.scss
@@ -4,6 +4,15 @@
   }
 }
 .team-section {
+  &__number {
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 48px;
+    @include media-breakpoint-down(lg) {
+      font-size: 32px;
+      line-height: 32px;
+    }
+  }
   &__hover {
     position: absolute;
     bottom: 0;
@@ -13,7 +22,8 @@
     transform: translateY(115%);
     transition: opacity 0.3s ease-out, -webkit-transform 0.3s ease-out;
     transition: transform 0.3s ease-out, opacity 0.3s ease-out;
-    transition: transform 0.3s ease-out, opacity 0.3s ease-out, -webkit-transform 0.3s ease-out;
+    transition: transform 0.3s ease-out, opacity 0.3s ease-out,
+      -webkit-transform 0.3s ease-out;
     opacity: 0;
     z-index: 17;
     background: rgba(#000, 0.4);
@@ -48,12 +58,13 @@
       max-width: 73px;
       text-align: right;
     }
-    .h3 {
+    .h2 {
       text-align: left;
       text-transform: uppercase;
+      line-height: 26px;
       span {
         font-size: 1rem;
-        line-height: 1.375;
+        line-height: 22px;
         display: block;
       }
     }
@@ -91,7 +102,7 @@
     }
     &::after,
     &::before {
-      content: '';
+      content: "";
       position: absolute;
       width: 100%;
       height: 100%;
@@ -102,11 +113,15 @@
     &::after {
       bottom: 0;
       z-index: 13;
-      background: linear-gradient(180deg, rgba(0, 79, 159, 0.0001) 38.87%, #004f9f 100%);
+      background: linear-gradient(
+        180deg,
+        rgba(0, 79, 159, 0.0001) 38.87%,
+        #004f9f 100%
+      );
     }
     &::before {
       top: 0;
-      background-image: url('../images/content/pozadi_stadion.png');
+      background-image: url("../images/content/pozadi_stadion.png");
       background-size: cover;
       background-repeat: no-repeat;
     }
@@ -123,7 +138,6 @@
       object-position: top;
     }
   }
- 
 }
 
 .team-section__item:hover {
