--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,16 +1,17 @@
 @charset "utf-8";
-@import '../../node_modules/bootstrap/scss/functions';
-@import '01-settings/*.scss';
-@import '../../node_modules/bootstrap/scss/mixins';
-@import '../../node_modules/bootstrap/scss/utilities';
-@import '02-tools/*.scss';
-@import '03-generic/*.scss';
-@import '04-utilities/*.scss';
-@import '05-vendor/*.scss';
-@import '06-components/*.scss';
-@import '07-elements/*.scss';
-@import '08-objects/*.scss';
-@import '../components/**/*.scss';
+@import "../../node_modules/bootstrap/scss/functions";
+@import "01-settings/*.scss";
+@import "../../node_modules/bootstrap/scss/mixins";
+@import "../../node_modules/bootstrap/scss/utilities";
+@import "02-tools/*.scss";
+@import "03-generic/*.scss";
+@import "04-utilities/*.scss";
+@import "05-vendor/*.scss";
+@import "06-components/*.scss";
+@import "07-elements/*.scss";
+@import "08-objects/*.scss";
+@import "09-utilities/*.scss";
+@import "../components/**/*.scss";
 /*! purgecss start ignore */
-@import '99-override/*.scss';
+@import "99-override/*.scss";
 /*! purgecss end ignore */
